# boedin-chat-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml
examples/: index.html
migrations/: 0001_create_users_table.sql  0002_create_messages_table.sql
src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs  utils.rs
src/handlers/: chat.rs
src/models/: auth.rs  chat.rs  mod.rs
src/routes/: auth.rs  chat.rs  mod.rs  ws.rs
src/states/: app.rs
